lemon/platform/jwt-reissuer/config/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jwt-reissuer
  namespace: kube-system
spec:
  virtualhost:
    fqdn: jwt-reissuer.ik.am
    tls:
      secretName: projectcontour/default-tls-ik-am
  routes:
  - services:
    - name: jwt-reissuer
      port: 80
